# GLCanvas

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
Assets/Shaders/: Card.frag  Card.vert  ColorQuad.frag  ColorQuad.vert
GLCanvas/: Base.h  CanvasCameraController.cpp  CanvasCameraController.h  CanvasLayer.cpp  CanvasLayer.h  GLCanvasApp.cpp  GLCanvasLayer.cpp  GLCanvasLayer.h  ImGuiHelper.h  ImVec2Defines.h  ImVec2Extend.h  Sandbox.h
GLCanvas/Canvas/: Canvas.cpp  Canvas.h  CanvasCameraController.cpp  CanvasCameraController.h  CanvasManager.cpp  CanvasManager.h  CanvasManger.cpp  CanvasStates.h  State.h  States.h
GLCanvas/Cards/: Card.cpp  Card.h  CardManager.cpp  CardManager.h  CardObject.cpp  CardObject.h  ColorCard.cpp  ColorCard.h
GLCanvas/States/: ClickSelectState.h  CreateCardState.h  DraggCardState.h  IdleState.h  MainState.h  MultiSelectState.h  PanningState.h
Sandbox/: Sandbox.cpp  Sandbox.h
scripts/: build.sh
src/: Sandbox.cpp  Sandbox.h
